--- a/overlay/frameworks/base/core/res/res/values/cr_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/cr_config.xml
@@ -26,4 +26,7 @@
     <!-- Enable system navigation keys. -->
     <bool name="config_supportSystemNavigationKeys">true</bool>
 
+    <!-- Enable for devices with higher aspect ratio screen. -->
+    <bool name="config_haveHigherAspectRatioScreen">true</bool>
+
 </resources>
