--- a/overlay/frameworks/base/core/res/res/values/cr_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/cr_config.xml
@@ -40,7 +40,9 @@
     <!-- Enable system navigation keys. -->
     <bool name="config_supportSystemNavigationKeys">true</bool>
 
-    <!-- Enable for devices with higher aspect ratio screen. -->
+    <!-- Whether device has screen with higher aspect ratio -->
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
+    <!-- Aspect ratio of screen -->
+    <item name="config_screenAspectRatio" format="float" type="dimen">2.0</item>
 
 </resources>
